--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         .footer-nav a {
             color: var(--text-secondary);
             font-weight: 500;
-            text-decoration: none; /* Tambahkan ini agar link tidak ada garis bawah default */
+            text-decoration: none;
             transition: color 0.3s;
         }
         .footer-nav a:hover {
@@ -621,7 +621,7 @@
                 <a href="#contact">Contact</a>
             </div>
             
-            </div>
+        </div>
     </footer>
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
